implemented license and manual extract

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,10 @@
 webdriver.location=/Users/ashish/Downloads/chromedriver_mac_arm64/chromedriver
 export.folder=/Users/ashish/Desktop/
 district.file=/Users/ashish/Documents/sts-ws/scrapper/src/main/resources/district.json
+license=Vmtaa2QxRnRWbFpOVkZaT1UwZFNVVlZZY0VOT2JGSlhVbFJzVVZWVU1Eaz0=
+
+scrapmanual= true
+manual.year=2023
+manual.distt=30
+manual.area=Princes Dock
+manual.propNo=4
